// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapSearchResultsItem rendering should render an item 1`] = `
<li
  className="map-search-results-item"
>
  <button
    className="map-search-results-item__button"
    onClick={[MockFunction]}
    title="Dam 1"
  >
    <section
      className="map-search-results-item__content"
    >
      <div
        className="map-search-results-item__name"
      >
        Dam 1
      </div>
    </section>
    <span
      className="map-search-results-item__arrow"
    />
  </button>
</li>
`;

exports[`MapSearchResultsItem rendering should update an item 1`] = `
<li
  className="map-search-results-item"
>
  <button
    className="map-search-results-item__button"
    onClick={[MockFunction]}
    title="ABC123"
  >
    <section
      className="map-search-results-item__content"
    >
      <div
        className="map-search-results-item__name"
      >
        ABC123
      </div>
      <div
        className="map-search-results-item__status"
      >
        dam 1
      </div>
    </section>
    <span
      className="map-search-results-item__arrow"
    />
  </button>
</li>
`;
